@@ -12,6 +12,7 @@
 * DataCash: Use API version 2 [curiousepic]
 * Stripe: Support verify_credentials [duff]
 * AuthorizeNet: Support verify_credentials [duff]
+* BraintreeBlue: Support verify_credentials [duff]
 
 
 == Version 1.59.0 (May 18, 2016)
